Ensure sufficient spacing above and below blockquotes
This is similar to what wallabag web is doing and avoids cases where
two blockquotes would be joined without space, or a blockquote could end
up butted up against the following content.

--- a/app/src/main/assets/dark.css
+++ b/app/src/main/assets/dark.css
@@ -228,7 +228,7 @@ header.mbm {
   border: 1px solid #999;
   background: #222;
   padding: 0.25em;
-  margin: 0;
+  margin: 1.25em 0;
 }
 
 #article blockquote p:last-of-type {
