--- a/app/src/main/assets/solarized.css
+++ b/app/src/main/assets/solarized.css
@@ -232,7 +232,7 @@ header.mbm {
   border:1px solid #999;
   background: #eee8d5; /* $base2*/
   padding: 0.25em;
-  margin: 0;
+  margin: 1.25em 0;
 }
 
 #article blockquote p:last-of-type {
